tests/fixtures/invalid/divmod_list_none.py
# Cannot call divmod() with List[int], None
x = divmod([1, 2, 3], None)
